root/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Thu Dec 17 17:28:33 2015
*filter
:INPUT ACCEPT [116:6232]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.0.2.0/24 -j ACCEPT
-A OUTPUT -d 192.168.64.0/24 -j ACCEPT
-A OUTPUT -d 127.0.0.0/8 -j ACCEPT
-A OUTPUT -m owner --uid-owner 108 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Dec 17 17:28:33 2015
# Generated by iptables-save v1.4.21 on Thu Dec 17 17:28:33 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 10.0.2.0/24 -i eth0 -j RETURN
-A PREROUTING -d 192.168.64.0/24 -i eth1 -j RETURN
-A PREROUTING -i eth1 -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -o lo -j RETURN
-A OUTPUT -m owner --uid-owner 108 -j RETURN
-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A OUTPUT -d 10.0.2.0/24 -j RETURN
-A OUTPUT -d 192.168.64.0/24 -j RETURN
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
COMMIT
# Completed on Thu Dec 17 17:28:33 2015
